fix: use UMD build with ES modules hybrid approach
- Load colyseus-vendored.js as regular script (creates window.Colyseus)
- ES modules import from window.Colyseus instead of npm packages
- Fixes 'Failed to resolve module specifier @colyseus/schema' error
- Apply to both lobby.html and game.html

This hybrid approach works in browsers without requiring a bundler
while still using ES modules for our own code.

--- a/public/game.html
+++ b/public/game.html
@@ -76,6 +76,10 @@
     </main>
   </div>
 
+  <!-- Load Colyseus UMD build first -->
+  <script src="/js/lib/colyseus-vendored.js"></script>
+
+  <!-- Then load our ES module game code -->
   <script type="module" src="/js/game.js"></script>
 </body>
 </html>
