--- a/public/lobby.html
+++ b/public/lobby.html
@@ -54,6 +54,31 @@
     </main>
   </div>
 
+  <script>
+    // Global error handler
+    window.addEventListener('error', (event) => {
+      console.error('❌ Global Error:', event.error);
+      console.error('Message:', event.message);
+      console.error('Filename:', event.filename);
+      console.error('Line:', event.lineno + ':' + event.colno);
+
+      const errorDiv = document.querySelector('.error-message');
+      if (errorDiv) {
+        errorDiv.textContent = 'Error: ' + event.message;
+        errorDiv.classList.add('active');
+      }
+    });
+
+    // Module loading error handler
+    window.addEventListener('unhandledrejection', (event) => {
+      console.error('❌ Unhandled Promise Rejection:', event.reason);
+    });
+  </script>
+
+  <!-- Load Colyseus UMD build first (creates window.Colyseus) -->
+  <script src="/js/lib/colyseus-vendored.js"></script>
+
+  <!-- Then load our ES module code -->
   <script type="module" src="/js/lobby.js"></script>
 </body>
 </html>
