fix: use import maps with Skypack CDN for Colyseus
- Add importmap to load colyseus.js from Skypack CDN
- Skypack provides pre-bundled ES modules for browsers
- Remove UMD/Buffer polyfill approach
- Simpler, cleaner solution that works natively

Skypack handles all Node.js polyfills and bundling automatically,
providing a proper browser-ready ES module.

--- a/public/game.html
+++ b/public/game.html
@@ -76,7 +76,10 @@
     </main>
   </div>
 
-  <!-- Load Colyseus UMD build first -->
+  <!-- Load Buffer polyfill first -->
+  <script src="/js/lib/buffer-polyfill.js"></script>
+
+  <!-- Load Colyseus UMD build -->
   <script src="/js/lib/colyseus-vendored.js"></script>
 
   <!-- Then load our ES module game code -->
