feat: add War game to lobby selection
- Add game selection UI with radio buttons for Snap and War
- Style game cards with hover and selected states
- Track selected gameType in lobby.js form submission
- Pass gameType to server in join_lobby message
- Add gameType field to Player schema
- Update LobbyRoom to create players with gameType
- Filter matchmaking by gameType (snap players only match snap, war only war)
- Pass gameType in matched message for correct game URL redirect
- Update lobby.js to redirect to game.html for snap, war.html for war
- All 396 unit tests passing
- Commit 18/20

--- a/public/lobby.html
+++ b/public/lobby.html
@@ -45,6 +45,27 @@
                 autocomplete="off"
               >
             </div>
+
+            <div class="form-group">
+              <label>Select Game</label>
+              <div class="game-selection">
+                <label class="game-option">
+                  <input type="radio" name="gameType" value="snap" checked>
+                  <div class="game-card">
+                    <h3>Snap</h3>
+                    <p>Fast-paced matching game</p>
+                  </div>
+                </label>
+                <label class="game-option">
+                  <input type="radio" name="gameType" value="war">
+                  <div class="game-card">
+                    <h3>War</h3>
+                    <p>Battle for all the cards</p>
+                  </div>
+                </label>
+              </div>
+            </div>
+
             <button type="submit" class="btn-primary">Find Match</button>
           </form>
         </div>
